[project]
name = "tron-test"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-pagination>=0.12.34",
    "fastapi[standard]>=0.115.6",
    "psycopg[binary]>=3.2.4",
    "sqlalchemy>=2.0.37",
    "tronpy>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B", "Q", "W", "N", "ASYNC", "S"]
lint.flake8-quotes.inline-quotes = "double"
format.quote-style = "double"
